Update issue link to Issue Github

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					Beta Version<br />
 					AMCU Units + Weaponary
 				</p>
-				<a href="https://github.com/">Submit an Issue</a>
+				<a href="https://github.com/discoADFU/Project_Uncut_Issues/issues/new">Submit an Issue</a>
 		        <!-- <a href="http://api.sudo.org.au/register" class="button success">Join Sudo</a>
 		        <a href="/about/" class="button white">Find Out More</a> -->
 			</div>
