Copy Update – Fix Weaponary

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h2>R.A.R. Release</h2>
 				<p>
 					Beta Version<br />
-					AMCU Units + Weaponary
+					AMCU Units + Weaponry
 				</p>
 				<a href="https://github.com/discoADFU/Project_Uncut_Issues/issues/new">Submit an Issue</a>
 		        <!-- <a href="http://api.sudo.org.au/register" class="button success">Join Sudo</a>
