--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 				<img src="/home/images/logo.png" width="493" height="266" alt="">
 				<h1>ADF UNCUT 0.1</h1>
 				<h2>R.A.R. Release</h2>
+
+				<br>
+		        <a href="https://www.dropbox.com/sh/7531ijfjz6d1gkw/AAAnlR7TSEa6k2KdMTayEN99a?dl=1" class="button success">Download Now</a>
+		        <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=934785894/" class="button white">Steam Workshop</a>
 				<p>
 					Beta Version<br />
 					AMCU Units + Weaponry
 				</p>
-				<a href="https://github.com/discoADFU/Project_Uncut_Issues/issues/new">Submit an Issue</a>
-		        <!-- <a href="http://api.sudo.org.au/register" class="button success">Join Sudo</a>
-		        <a href="/about/" class="button white">Find Out More</a> -->
+				<a class="issue" href="https://github.com/discoADFU/Project_Uncut_Issues/issues/new">Submit an Issue</a>
 			</div>
 		</div>
 	</section>
