Updated Download Link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h2>R.A.R. Release</h2>
 
 				<br>
-		        <a href="https://www.dropbox.com/sh/7531ijfjz6d1gkw/AAAnlR7TSEa6k2KdMTayEN99a?dl=1" class="button success">Download Now</a>
+		        <a href="http://www.armaholic.com/page.php?id=32799" class="button success">Download Now</a>
 		        <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=934785894/" class="button white">Steam Workshop</a>
 				<p>
 					Beta Version<br />
